mux-compiler/tests/snapshots/executable_integration__executable_integration__runtime_int_overflow.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: normalized
---
panic[E0605]: integer addition overflow
--> runtime_int_overflow.mux:4:8
