mux-compiler/tests/snapshots/executable_integration__executable_integration__runtime_int_sub_overflow.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: normalized
---
panic[E0605]: integer subtraction overflow
--> runtime_int_sub_overflow.mux:4:8
