mux-compiler/tests/snapshots/executable_integration__executable_integration__runtime_map_key_not_found.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: normalized
---
panic[E0601]: key not found in map: key bob
--> runtime_map_key_not_found.mux:5:12
