mux-compiler/tests/snapshots/executable_integration__executable_integration__runtime_mod_by_zero.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: normalized
---
panic[E0602]: modulo by zero
--> runtime_mod_by_zero.mux:5:16
