mux-compiler/tests/snapshots/executable_integration__executable_integration__runtime_where_enum_variant.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: normalized
---
panic[E0604]: where constraint violated
--> runtime_where_enum_variant.mux:5:43
