mux-compiler/tests/snapshots/executable_integration__executable_integration__runtime_where_field.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: normalized
---
panic: where constraint violated
--> runtime_where_field.mux:4:41
