mux-compiler/tests/snapshots/executable_integration__executable_integration__runtime_where_generic.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: normalized
---
panic: where constraint violated
--> runtime_where_generic.mux:3:41
