mux-compiler/tests/snapshots/executable_integration__executable_integration__runtime_where_lambda.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: normalized
---
panic[E0604]: where constraint violated
--> runtime_where_lambda.mux:5:36
